--- a/Linx6/Authentication.folder/API_Key.folder/authenticate_apiKey.function/authenticate_apiKey.properties
+++ b/Linx6/Authentication.folder/API_Key.folder/authenticate_apiKey.function/authenticate_apiKey.properties
@@ -6,16 +6,17 @@
   "Result": "Custom:ujDO",
   "Functions": [
     {
-      "Id": "B0Gb",
+      "Id": "SFDd",
       "Name": "ValidateAPIKeyFromDatabase",
       "Type": "Database:ExecuteSQL",
       "Path": "ValidateAPIKeyFromDatabase.function"
     },
     {
-      "Id": "BzCu",
-      "Name": "SetOutput_authenticated",
-      "Type": "Linx:SetValue",
-      "Path": "SetOutput_authenticated.function"
+      "Id": "oEnO",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
-  ]
+  ],
+  "ProcessType": "Function"
 }
