--- a/Linx6/Authentication.folder/Basic.folder/authenticate_basic.function/authenticate_basic.properties
+++ b/Linx6/Authentication.folder/Basic.folder/authenticate_basic.function/authenticate_basic.properties
@@ -6,6 +6,12 @@
   "Result": "Custom:ujDO",
   "Functions": [
     {
+      "Id": "FEBQ",
+      "Name": "_Result",
+      "Type": "Linx:CustomType",
+      "Path": "_Result.function"
+    },
+    {
       "Id": "bxX7",
       "Name": "decodeBase64",
       "Type": "Linx:RunProcess",
@@ -30,7 +36,7 @@
       "Path": "GenerateHash.function"
     },
     {
-      "Id": "UIKK",
+      "Id": "8Nw3",
       "Name": "SearchUserMatch",
       "Type": "Database:ExecuteSQL",
       "Path": "SearchUserMatch.function"
@@ -68,6 +74,13 @@
         }
       ],
       "Path": "CheckResult.function"
+    },
+    {
+      "Id": "3qTq",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
-  ]
+  ],
+  "ProcessType": "Function"
 }
