--- a/Linx6/Authentication.folder/Bearer.folder/extractTokenFromHeader.function/extractTokenFromHeader.properties
+++ b/Linx6/Authentication.folder/Bearer.folder/extractTokenFromHeader.function/extractTokenFromHeader.properties
@@ -6,10 +6,11 @@
   "Result": "Custom:GSa4",
   "Functions": [
     {
-      "Id": "LfcT",
-      "Name": "SetOutput_token",
-      "Type": "Linx:SetValue",
-      "Path": "SetOutput_token.function"
+      "Id": "YV1t",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
-  ]
+  ],
+  "ProcessType": "Function"
 }
