--- a/Linx6/Authentication.folder/Bearer.folder/generateToken.function/generateToken.properties
+++ b/Linx6/Authentication.folder/Bearer.folder/generateToken.function/generateToken.properties
@@ -18,10 +18,11 @@
       "Path": "CreateJWT.function"
     },
     {
-      "Id": "hID5",
-      "Name": "SetValueToken",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueToken.function"
+      "Id": "uBnv",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
-  ]
+  ],
+  "ProcessType": "Function"
 }
