--- a/Linx6/Authentication.folder/Bearer.folder/verifyToken.function/verifyToken.properties
+++ b/Linx6/Authentication.folder/Bearer.folder/verifyToken.function/verifyToken.properties
@@ -12,10 +12,11 @@
       "Path": "VerifyJWT.function"
     },
     {
-      "Id": "F8rn",
-      "Name": "SetValueResult",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueResult.function"
+      "Id": "NoXs",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
-  ]
+  ],
+  "ProcessType": "Function"
 }
