--- a/Linx6/Authentication.folder/decodeBase64.function/decodeBase64.properties
+++ b/Linx6/Authentication.folder/decodeBase64.function/decodeBase64.properties
@@ -8,7 +8,7 @@
     {
       "Id": "TSr6",
       "Name": "ByteListFromBase64",
-      "Type": "Linx:List",
+      "Type": "Linx:List<>",
       "Path": "ByteListFromBase64.function"
     },
     {
@@ -18,10 +18,11 @@
       "Path": "Decoded.function"
     },
     {
-      "Id": "jKdk",
-      "Name": "SetValue",
-      "Type": "Linx:SetValue",
-      "Path": "SetValue.function"
+      "Id": "MUKz",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
-  ]
+  ],
+  "ProcessType": "Function"
 }
