--- a/Linx6/RESTHost.service/CreateUser.event/CreateUser.properties
+++ b/Linx6/RESTHost.service/CreateUser.event/CreateUser.properties
@@ -1,10 +1,10 @@
 {
   "Id": "eFXg",
   "Name": "CreateUser",
-  "Key": "CreateUser",
+  "PluginId": "CreateUser",
   "Functions": [
     {
-      "Id": "IURb",
+      "Id": "EbJp",
       "Name": "CheckUsername",
       "Type": "Database:ExecuteSQL",
       "Path": "CheckUsername.function"
@@ -42,16 +42,16 @@
                       "Path": "GenerateHash.function"
                     },
                     {
-                      "Id": "jFym",
+                      "Id": "RCrj",
                       "Name": "AddUserToDatabase",
                       "Type": "Database:ExecuteSQL",
                       "Path": "AddUserToDatabase.function"
                     },
                     {
-                      "Id": "UKr7",
-                      "Name": "SetValue201",
-                      "Type": "Linx:SetValue",
-                      "Path": "SetValue201.function"
+                      "Id": "Cl3c",
+                      "Name": "Return201",
+                      "Type": "Linx:Return",
+                      "Path": "Return201.function"
                     }
                   ]
                 },
@@ -61,10 +61,10 @@
                   "Name": "Else",
                   "Functions": [
                     {
-                      "Id": "R2NS",
-                      "Name": "SetValue400",
-                      "Type": "Linx:SetValue",
-                      "Path": "SetValue400.function"
+                      "Id": "RtDt",
+                      "Name": "Return400",
+                      "Type": "Linx:Return",
+                      "Path": "Return400.function"
                     }
                   ]
                 }
@@ -79,10 +79,10 @@
           "Name": "Else",
           "Functions": [
             {
-              "Id": "aoit",
-              "Name": "SetValue400_2",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue400_2.function"
+              "Id": "o8bZ",
+              "Name": "Return400_2",
+              "Type": "Linx:Return",
+              "Path": "Return400_2.function"
             }
           ]
         }
