--- a/Linx6/RESTHost.service/DeleteUser.event/DeleteUser.properties
+++ b/Linx6/RESTHost.service/DeleteUser.event/DeleteUser.properties
@@ -1,7 +1,7 @@
 {
   "Id": "Buog",
   "Name": "DeleteUser",
-  "Key": "DeleteUser",
+  "PluginId": "DeleteUser",
   "Functions": [
     {
       "Id": "0cKE",
@@ -20,10 +20,10 @@
           "Name": "Successful",
           "Functions": [
             {
-              "Id": "yI7b",
-              "Name": "SetValue204",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue204.function"
+              "Id": "YYaZ",
+              "Name": "Return204",
+              "Type": "Linx:Return",
+              "Path": "Return204.function"
             }
           ]
         },
@@ -33,10 +33,10 @@
           "Name": "Else",
           "Functions": [
             {
-              "Id": "6m39",
-              "Name": "SetValue404",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue404.function"
+              "Id": "hBa4",
+              "Name": "Return404",
+              "Type": "Linx:Return",
+              "Path": "Return404.function"
             }
           ]
         }
