--- a/Linx6/RESTHost.service/GenerateUserToken.event/GenerateUserToken.properties
+++ b/Linx6/RESTHost.service/GenerateUserToken.event/GenerateUserToken.properties
@@ -1,7 +1,7 @@
 {
   "Id": "FmH0",
   "Name": "GenerateUserToken",
-  "Key": "GenerateUserToken",
+  "PluginId": "GenerateUserToken",
   "Functions": [
     {
       "Id": "aeV9",
@@ -10,10 +10,10 @@
       "Path": "generateToken.function"
     },
     {
-      "Id": "IiPu",
-      "Name": "SetValue200",
-      "Type": "Linx:SetValue",
-      "Path": "SetValue200.function"
+      "Id": "hiV4",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
