--- a/Linx6/RESTHost.service/GetCurrentUser.event/GetCurrentUser.properties
+++ b/Linx6/RESTHost.service/GetCurrentUser.event/GetCurrentUser.properties
@@ -1,7 +1,7 @@
 {
   "Id": "WV1X",
   "Name": "GetCurrentUser",
-  "Key": "GetCurrentUser",
+  "PluginId": "GetCurrentUser",
   "Functions": [
     {
       "Id": "A21S",
@@ -10,10 +10,10 @@
       "Path": "GetUser.function"
     },
     {
-      "Id": "rBhO",
-      "Name": "SetValue200",
-      "Type": "Linx:SetValue",
-      "Path": "SetValue200.function"
+      "Id": "NwHl",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
