--- a/Linx6/RESTHost.service/GetUser.event/GetUser.properties
+++ b/Linx6/RESTHost.service/GetUser.event/GetUser.properties
@@ -1,7 +1,7 @@
 {
   "Id": "jGAT",
   "Name": "GetUser",
-  "Key": "GetUser",
+  "PluginId": "GetUser",
   "Functions": [
     {
       "Id": "UEQ6",
@@ -20,10 +20,10 @@
           "Name": "Exists",
           "Functions": [
             {
-              "Id": "fN9M",
-              "Name": "SetValue200",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue200.function"
+              "Id": "B8JB",
+              "Name": "Return200",
+              "Type": "Linx:Return",
+              "Path": "Return200.function"
             }
           ]
         },
@@ -33,10 +33,10 @@
           "Name": "Else",
           "Functions": [
             {
-              "Id": "1cHB",
-              "Name": "SetValue404",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue404.function"
+              "Id": "L7eA",
+              "Name": "Return404",
+              "Type": "Linx:Return",
+              "Path": "Return404.function"
             }
           ]
         }
