--- a/Linx6/RESTHost.service/HelloWorld.event/HelloWorld.properties
+++ b/Linx6/RESTHost.service/HelloWorld.event/HelloWorld.properties
@@ -1,7 +1,7 @@
 {
   "Id": "rvA8",
   "Name": "HelloWorld",
-  "Key": "HelloWorld",
+  "PluginId": "HelloWorld",
   "Functions": [
     {
       "Id": "fCNQ",
@@ -16,10 +16,10 @@
       "Path": "String2.function"
     },
     {
-      "Id": "CwVy",
-      "Name": "SetValue",
-      "Type": "Linx:SetValue",
-      "Path": "SetValue.function"
+      "Id": "u32Z",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
