--- a/Linx6/RESTHost.service/ListUsers.event/ListUsers.properties
+++ b/Linx6/RESTHost.service/ListUsers.event/ListUsers.properties
@@ -1,7 +1,7 @@
 {
   "Id": "fTKJ",
   "Name": "ListUsers",
-  "Key": "ListUsers",
+  "PluginId": "ListUsers",
   "Functions": [
     {
       "Id": "hFtM",
@@ -20,10 +20,23 @@
           "Name": "ListIsNotNull",
           "Functions": [
             {
-              "Id": "Rr5a",
-              "Name": "SetValue",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue.function"
+              "Id": "cZ6O",
+              "Name": "Return200",
+              "Type": "Linx:Return",
+              "Path": "Return200.function"
+            }
+          ]
+        },
+        {
+          "Id": "BcSO",
+          "PluginId": "Else",
+          "Name": "Else",
+          "Functions": [
+            {
+              "Id": "1nJV",
+              "Name": "Return422",
+              "Type": "Linx:Return",
+              "Path": "Return422.function"
             }
           ]
         }
