--- a/Linx6/RESTHost.service/OperationEvents_AfterOperation.event/OperationEvents_AfterOperation.properties
+++ b/Linx6/RESTHost.service/OperationEvents_AfterOperation.event/OperationEvents_AfterOperation.properties
@@ -1,6 +1,13 @@
 {
   "Id": "XwDa",
   "Name": "OperationEvents_AfterOperation",
-  "Key": "OperationEvents_AfterOperation",
-  "Functions": []
+  "PluginId": "OperationEvents_AfterOperation",
+  "Functions": [
+    {
+      "Id": "023K",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
+    }
+  ]
 }
