--- a/Linx6/RESTHost.service/OperationEvents_Authenticate.event/OperationEvents_Authenticate.properties
+++ b/Linx6/RESTHost.service/OperationEvents_Authenticate.event/OperationEvents_Authenticate.properties
@@ -1,7 +1,7 @@
 {
   "Id": "jYyn",
   "Name": "OperationEvents_Authenticate",
-  "Key": "OperationEvents_Authenticate",
+  "PluginId": "OperationEvents_Authenticate",
   "Functions": [
     {
       "Id": "jukW",
@@ -20,10 +20,10 @@
               "Path": "authenticate_apiKey.function"
             },
             {
-              "Id": "UTvW",
-              "Name": "SetValueapi_key",
-              "Type": "Linx:SetValue",
-              "Path": "SetValueapi_key.function"
+              "Id": "RVMJ",
+              "Name": "ReturnAPI_Key",
+              "Type": "Linx:Return",
+              "Path": "ReturnAPI_Key.function"
             }
           ]
         },
@@ -39,10 +39,10 @@
               "Path": "authenticate_basic.function"
             },
             {
-              "Id": "s4Og",
-              "Name": "SetValueBasic",
-              "Type": "Linx:SetValue",
-              "Path": "SetValueBasic.function"
+              "Id": "yFgj",
+              "Name": "ReturnBasic",
+              "Type": "Linx:Return",
+              "Path": "ReturnBasic.function"
             }
           ]
         }
