--- a/Linx6/RESTHost.service/OperationEvents_BeforeOperation.event/OperationEvents_BeforeOperation.properties
+++ b/Linx6/RESTHost.service/OperationEvents_BeforeOperation.event/OperationEvents_BeforeOperation.properties
@@ -1,6 +1,13 @@
 {
   "Id": "8iko",
   "Name": "OperationEvents_BeforeOperation",
-  "Key": "OperationEvents_BeforeOperation",
-  "Functions": []
+  "PluginId": "OperationEvents_BeforeOperation",
+  "Functions": [
+    {
+      "Id": "gJ4p",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
+    }
+  ]
 }
