--- a/Linx6/RESTHost.service/RESTHost.properties
+++ b/Linx6/RESTHost.service/RESTHost.properties
@@ -4,6 +4,12 @@
   "ServiceData": {
     "Properties": [
       {
+        "Id": "After operation",
+        "Type": "Compiled:Boolean",
+        "ValueUsage": "DesignTime",
+        "Value": true
+      },
+      {
         "Id": "API definition",
         "Type": "Compiled:String",
         "ValueUsage": "DesignTime",
@@ -16,66 +22,14 @@
         "Value": ""
       },
       {
-        "Id": "Show server errors",
-        "Type": "Compiled:Boolean",
-        "ValueUsage": "RuntimeRead",
-        "Value": true
-      },
-      {
-        "Id": "Max request size",
-        "Type": "Compiled:System.Nullable`1[[System.Int64, System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
-        "ValueUsage": "RuntimeRead",
-        "Value": 3000,
-        "ValueType": "Int64"
-      },
-      {
-        "Id": "Max connections",
-        "Type": "Compiled:System.Nullable`1[[System.Int64, System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
-        "ValueUsage": "RuntimeRead",
-        "Value": null
-      },
-      {
-        "Id": "CORS origins",
-        "Type": "Compiled:System.Collections.Generic.List`1[[System.String, System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
-        "ValueUsage": "RuntimeRead",
-        "Value": null
-      },
-      {
-        "Id": "Authenticate",
-        "Type": "Compiled:Boolean",
+        "Id": "API documentation",
+        "Type": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.ApiDocumentation.ApiDocumentationType, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null",
         "ValueUsage": "DesignTime",
-        "Value": true
-      },
-      {
-        "Id": "Base URI",
-        "Type": "Compiled:String",
-        "ValueUsage": "RuntimeRead",
-        "Value": {
-          "Expression": "$.Settings.api_base_uri +\"/demo\"",
-          "CompiledExpression": "={0}+\"/demo\"",
-          "Type": "Compiled:String"
-        },
-        "ValueType": "Linx.CSharpExpression"
-      },
-      {
-        "Id": "Operation events",
-        "Type": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationEvents.OperationEventCollection, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null",
-        "ValueUsage": "DesignTime",
-        "Value": [
-          {
-            "Name": "OperationEvents_BeforeOperation"
-          },
-          {
-            "Name": "OperationEvents_AfterOperation"
-          },
-          {
-            "Name": "OperationEvents_Authenticate"
-          }
-        ]
+        "Value": "SwaggerUI"
       },
       {
         "Id": "Auth config",
-        "Type": "Compiled:System.Collections.Generic.List`1[[Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.AspNetCore.Authentication.AuthenticationConfiguration, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null]], System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
+        "Type": "Compiled:System.Collections.Generic.List`1[[Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.AspNetCore.Authentication.AuthenticationConfiguration, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null]], System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
         "ValueUsage": "RuntimeRead",
         "Value": {
           "ParsedExpression": "[{\"SchemeName\":\"Token\", \"SchemeType\":\"HttpBearer\", \"Properties\":[{\"Name\":\"Secret\", \"Value\":{\"LinxExpression\":\"[PARSED]\"}}]}]",
@@ -98,14 +52,66 @@
         "ValueType": "Linx.JsonExpression"
       },
       {
-        "Id": "API documentation",
-        "Type": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.ApiDocumentation.ApiDocumentationType, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null",
+        "Id": "Authenticate",
+        "Type": "Compiled:Boolean",
         "ValueUsage": "DesignTime",
-        "Value": "SwaggerUI"
+        "Value": true
+      },
+      {
+        "Id": "Base URI",
+        "Type": "Compiled:String",
+        "ValueUsage": "RuntimeRead",
+        "Value": {
+          "Expression": "$.Settings.api_base_uri +\"/demo\"",
+          "CompiledExpression": "={0}+\"/demo\"",
+          "Type": "Compiled:String"
+        },
+        "ValueType": "Linx.CSharpExpression"
+      },
+      {
+        "Id": "Before operation",
+        "Type": "Compiled:Boolean",
+        "ValueUsage": "DesignTime",
+        "Value": true
+      },
+      {
+        "Id": "CORS origins",
+        "Type": "Compiled:System.Collections.Generic.List`1[[System.String, System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
+        "ValueUsage": "RuntimeRead",
+        "Value": null
+      },
+      {
+        "Id": "Max connections",
+        "Type": "Compiled:System.Nullable`1[[System.Int64, System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
+        "ValueUsage": "RuntimeRead",
+        "Value": null
+      },
+      {
+        "Id": "Max request size",
+        "Type": "Compiled:System.Nullable`1[[System.Int64, System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e",
+        "ValueUsage": "RuntimeRead",
+        "Value": 3000,
+        "ValueType": "Int64"
+      },
+      {
+        "Id": "Operation events",
+        "Type": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationEvents.OperationEventCollection, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null",
+        "ValueUsage": "DesignTime",
+        "Value": [
+          {
+            "Name": "OperationEvents_BeforeOperation"
+          },
+          {
+            "Name": "OperationEvents_AfterOperation"
+          },
+          {
+            "Name": "OperationEvents_Authenticate"
+          }
+        ]
       },
       {
         "Id": "Operations",
-        "Type": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationCollection, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null",
+        "Type": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationCollection, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null",
         "ValueUsage": "DesignTime",
         "Value": [
           {
@@ -161,21 +167,15 @@
         ]
       },
       {
-        "Id": "Before operation",
+        "Id": "Show server errors",
         "Type": "Compiled:Boolean",
-        "ValueUsage": "DesignTime",
-        "Value": true
-      },
-      {
-        "Id": "After operation",
-        "Type": "Compiled:Boolean",
-        "ValueUsage": "DesignTime",
+        "ValueUsage": "RuntimeRead",
         "Value": true
       }
     ],
     "Events": [
       {
-        "Id": "CreateUser",
+        "PluginId": "CreateUser",
         "Name": "CreateUser",
         "Parameters": [
           {
@@ -184,13 +184,13 @@
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:pNoA"
       },
       {
-        "Id": "DeleteUser",
+        "PluginId": "DeleteUser",
         "Name": "DeleteUser",
         "Parameters": [
           {
@@ -199,13 +199,13 @@
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:Ly7R"
       },
       {
-        "Id": "DownloadPhoto",
+        "PluginId": "DownloadPhoto",
         "Name": "DownloadPhoto",
         "Parameters": [
           {
@@ -214,35 +214,35 @@
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:GHsw"
       },
       {
-        "Id": "GenerateUserToken",
+        "PluginId": "GenerateUserToken",
         "Name": "GenerateUserToken",
         "Parameters": [
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:JWv5"
       },
       {
-        "Id": "GetCurrentUser",
+        "PluginId": "GetCurrentUser",
         "Name": "GetCurrentUser",
         "Parameters": [
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:5iqY"
       },
       {
-        "Id": "GetUser",
+        "PluginId": "GetUser",
         "Name": "GetUser",
         "Parameters": [
           {
@@ -251,24 +251,24 @@
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:ltrp"
       },
       {
-        "Id": "HelloWorld",
+        "PluginId": "HelloWorld",
         "Name": "HelloWorld",
         "Parameters": [
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:pgda"
       },
       {
-        "Id": "ListUsers",
+        "PluginId": "ListUsers",
         "Name": "ListUsers",
         "Parameters": [
           {
@@ -281,50 +281,50 @@
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:9UsM"
       },
       {
-        "Id": "OperationEvents_AfterOperation",
+        "PluginId": "OperationEvents_AfterOperation",
         "Name": "OperationEvents_AfterOperation",
         "Parameters": [
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationEvents.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationEvents.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
-        "Result": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationEvents.Data.Out.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+        "Result": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationEvents.Data.Out.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
       },
       {
-        "Id": "OperationEvents_Authenticate",
+        "PluginId": "OperationEvents_Authenticate",
         "Name": "OperationEvents_Authenticate",
         "Parameters": [
           {
             "Name": "AuthenticationData",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationEvents.Authenticate.AuthenticateEventInputData, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationEvents.Authenticate.AuthenticateEventInputData, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
-        "Result": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationEvents.Authenticate.AuthenticateEventOutput, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+        "Result": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationEvents.Authenticate.AuthenticateEventOutput, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
       },
       {
-        "Id": "OperationEvents_BeforeOperation",
+        "PluginId": "OperationEvents_BeforeOperation",
         "Name": "OperationEvents_BeforeOperation",
         "Parameters": [
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationEvents.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationEvents.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
-        "Result": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.OperationEvents.Data.Out.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+        "Result": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.OperationEvents.Data.Out.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
       },
       {
-        "Id": "UpdateUser",
+        "PluginId": "UpdateUser",
         "Name": "UpdateUser",
         "Parameters": [
           {
@@ -337,13 +337,13 @@
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:V2M9"
       },
       {
-        "Id": "UploadPhoto",
+        "PluginId": "UploadPhoto",
         "Name": "UploadPhoto",
         "Parameters": [
           {
@@ -352,16 +352,17 @@
           },
           {
             "Name": "body",
-            "TypeReference": "Compiled:System.Collections.Generic.List`1[[System.Byte, System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e"
+            "TypeReference": "Compiled:System.Collections.Generic.List`1[[System.Byte, System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e]], System.Private.CoreLib, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e"
           },
           {
             "Name": "HttpContext",
-            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null"
+            "TypeReference": "Compiled:Twenty57.Linx.Plugins.Rest.Shared.OpenAPIWebService.OpenAPI.Data.In.HttpContext, Twenty57.Linx.Plugins.Rest.Shared, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null"
           }
         ],
         "Result": "Generated:Ojrt"
       }
-    ]
+    ],
+    "ServiceFunctions": []
   },
   "ServiceType": "REST:RESTHost",
   "Events": [
@@ -378,5 +379,6 @@
     "OperationEvents_BeforeOperation.event",
     "OperationEvents_AfterOperation.event",
     "OperationEvents_Authenticate.event"
-  ]
+  ],
+  "ServiceFunctions": []
 }
