--- a/Linx6/RESTHost.service/UpdateUser.event/UpdateUser.properties
+++ b/Linx6/RESTHost.service/UpdateUser.event/UpdateUser.properties
@@ -1,7 +1,7 @@
 {
   "Id": "VO5Y",
   "Name": "UpdateUser",
-  "Key": "UpdateUser",
+  "PluginId": "UpdateUser",
   "Functions": [
     {
       "Id": "MBKp",
@@ -20,10 +20,10 @@
           "Name": "Successful",
           "Functions": [
             {
-              "Id": "wHPd",
-              "Name": "SetValue204",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue204.function"
+              "Id": "o54y",
+              "Name": "Return204",
+              "Type": "Linx:Return",
+              "Path": "Return204.function"
             }
           ]
         },
@@ -33,10 +33,10 @@
           "Name": "Else",
           "Functions": [
             {
-              "Id": "eXVd",
-              "Name": "SetValue404",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue404.function"
+              "Id": "hQTh",
+              "Name": "Return404",
+              "Type": "Linx:Return",
+              "Path": "Return404.function"
             }
           ]
         }
