--- a/Linx6/RESTHost.service/UploadPhoto.event/UploadPhoto.properties
+++ b/Linx6/RESTHost.service/UploadPhoto.event/UploadPhoto.properties
@@ -1,13 +1,19 @@
 {
   "Id": "AyLJ",
   "Name": "UploadPhoto",
-  "Key": "UploadPhoto",
+  "PluginId": "UploadPhoto",
   "Functions": [
     {
       "Id": "KXTh",
       "Name": "BinaryFileWrite",
       "Type": "File:BinaryFileWrite",
       "Path": "BinaryFileWrite.function"
+    },
+    {
+      "Id": "ffR9",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
