--- a/Linx6/RESTHost.service/DownloadPhoto.event/DownloadPhoto.properties
+++ b/Linx6/RESTHost.service/DownloadPhoto.event/DownloadPhoto.properties
@@ -1,7 +1,7 @@
 {
   "Id": "4jQ7",
   "Name": "DownloadPhoto",
-  "Key": "DownloadPhoto",
+  "PluginId": "DownloadPhoto",
   "Functions": [
     {
       "Id": "ST1n",
@@ -26,10 +26,10 @@
               "Path": "BinaryFileRead_ConvertImageToBinary.function"
             },
             {
-              "Id": "SuNp",
-              "Name": "SetValue200",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue200.function"
+              "Id": "6BVd",
+              "Name": "Return200",
+              "Type": "Linx:Return",
+              "Path": "Return200.function"
             }
           ]
         },
@@ -39,10 +39,10 @@
           "Name": "Else",
           "Functions": [
             {
-              "Id": "zZwr",
-              "Name": "SetValue400",
-              "Type": "Linx:SetValue",
-              "Path": "SetValue400.function"
+              "Id": "0xOA",
+              "Name": "Return400",
+              "Type": "Linx:Return",
+              "Path": "Return400.function"
             }
           ]
         }
